--- a/panels/wacom/calibrator/calibrator.ui
+++ b/panels/wacom/calibrator/calibrator.ui
@@ -5,46 +5,39 @@
     <property name="name">calibrator</property>
     <child>
       <object class="GtkStack" id="stack">
-        <property name="visible">True</property>
         <property name="transition_duration">0</property>
         <child>
           <object class="GtkGrid">
-            <property name="visible">True</property>
             <property name="row_homogeneous">True</property>
             <property name="column_homogeneous">True</property>
             <child>
               <object class="GtkBox">
-                <property name="visible">True</property>
                 <property name="orientation">vertical</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="row">0</property>
+                  <property name="column-span">8</property>
+                  <property name="row-span">8</property>
+                </layout>
                 <child>
                   <object class="GtkBox" id="box1">
-                    <property name="visible">True</property>
                     <property name="orientation">vertical</property>
+                    <property name="vexpand">True</property>
                   </object>
-                  <packing>
-                    <property name="expand">True</property>
-                  </packing>
                 </child>
                 <child>
-                  <object class="CcClock" id="clock">
-                    <property name="visible">True</property>
-                  </object>
-                  <packing>
-                    <property name="position">1</property>
-                  </packing>
+                  <object class="CcClock" id="clock" />
                 </child>
                 <child>
                   <object class="GtkBox" id="box2">
-                    <property name="visible">True</property>
                     <property name="orientation">vertical</property>
+                    <property name="vexpand">True</property>
                     <child>
                       <object class="GtkRevealer" id="title_revealer">
-                        <property name="visible">True</property>
                         <property name="transition_duration">300</property>
                         <child>
                           <object class="GtkLabel">
                             <property name="name">title</property>
-                            <property name="visible">True</property>
                             <property name="label" translatable="yes">Screen Calibration</property>
                           </object>
                         </child>
@@ -52,143 +45,117 @@
                     </child>
                     <child>
                       <object class="GtkRevealer" id="subtitle_revealer">
-                        <property name="visible">True</property>
                         <property name="transition_duration">300</property>
                         <child>
                           <object class="GtkLabel">
                             <property name="name">subtitle</property>
-                            <property name="visible">True</property>
                             <property name="label" translatable="yes">Please tap the target markers as they appear on screen to calibrate the tablet.</property>
                           </object>
                         </child>
                       </object>
-                      <packing>
-                        <property name="position">1</property>
-                      </packing>
                     </child>
                     <child>
                       <object class="GtkRevealer" id="error_revealer">
-                        <property name="visible">True</property>
                         <property name="transition_type">crossfade</property>
                         <property name="transition_duration">500</property>
                         <child>
                           <object class="GtkLabel">
                             <property name="name">error</property>
-                            <property name="visible">True</property>
                             <property name="label" translatable="yes">Mis-click detected, restarting…</property>
                           </object>
                         </child>
                       </object>
-                      <packing>
-                        <property name="position">2</property>
-                      </packing>
                     </child>
                   </object>
-                  <packing>
-                    <property name="expand">True</property>
-                    <property name="position">2</property>
-                  </packing>
                 </child>
               </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">0</property>
-                <property name="width">8</property>
-                <property name="height">8</property>
-              </packing>
             </child>
             <child>
               <object class="GtkEventBox" id="target1">
                 <property name="name">target</property>
                 <property name="width_request">100</property>
                 <property name="height_request">100</property>
-                <property name="visible">True</property>
-		<property name="visible_window">True</property>
+                <property name="visible_window">True</property>
                 <property name="sensitive">False</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="row">0</property>
+                  <property name="column-span">2</property>
+                  <property name="row-span">2</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">0</property>
-                <property name="width">2</property>
-                <property name="height">2</property>
-              </packing>
             </child>
             <child>
               <object class="GtkEventBox" id="target2">
                 <property name="name">target</property>
                 <property name="width_request">100</property>
                 <property name="height_request">100</property>
-                <property name="visible">True</property>
-		<property name="visible_window">True</property>
+                <property name="visible_window">True</property>
                 <property name="sensitive">False</property>
+                <layout>
+                  <property name="column">6</property>
+                  <property name="row">0</property>
+                  <property name="column-span">2</property>
+                  <property name="row-span">2</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">6</property>
-                <property name="top_attach">0</property>
-                <property name="width">2</property>
-                <property name="height">2</property>
-              </packing>
             </child>
             <child>
               <object class="GtkEventBox" id="target3">
                 <property name="name">target</property>
                 <property name="width_request">100</property>
                 <property name="height_request">100</property>
-                <property name="visible">True</property>
-		<property name="visible_window">True</property>
+                <property name="visible_window">True</property>
                 <property name="sensitive">False</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="row">6</property>
+                  <property name="column-span">2</property>
+                  <property name="row-span">2</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">6</property>
-                <property name="width">2</property>
-                <property name="height">2</property>
-              </packing>
             </child>
             <child>
               <object class="GtkEventBox" id="target4">
                 <property name="name">target</property>
                 <property name="width_request">100</property>
                 <property name="height_request">100</property>
-                <property name="visible">True</property>
-		<property name="visible_window">True</property>
+                <property name="visible_window">True</property>
                 <property name="sensitive">False</property>
+                <layout>
+                  <property name="column">6</property>
+                  <property name="row">6</property>
+                  <property name="column-span">2</property>
+                  <property name="row-span">2</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">6</property>
-                <property name="top_attach">6</property>
-                <property name="width">2</property>
-                <property name="height">2</property>
-              </packing>
             </child>
             <child>
               <object class="GtkRevealer">
-                <property name="visible">True</property>
                 <property name="transition_type">none</property>
                 <property name="transition_duration">0</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="row">0</property>
+                  <property name="column-span">8</property>
+                  <property name="row-span">8</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">0</property>
-                <property name="width">8</property>
-                <property name="height">8</property>
-              </packing>
             </child>
           </object>
-          <packing>
+          <layout>
             <property name="name">page0</property>
-          </packing>
+          </layout>
         </child>
         <child>
           <object class="GtkImage">
-            <property name="visible">True</property>
             <property name="pixel_size">300</property>
             <property name="icon_name">emblem-ok-symbolic</property>
           </object>
-          <packing>
+          <layout>
             <property name="name">page1</property>
             <property name="position">1</property>
-          </packing>
+          </layout>
         </child>
       </object>
     </child>
